--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <span class="text sec-text">Full Stack Developer</span>
         <br>
         <div class="btn" style="padding-top: 15px;padding-bottom: 15px;">
-            <a href="https://syamsundakvportfolio.netlify.app/" class="button">Portfolio Link</a>
+            <a href="#" class="button">Portfolio Link</a>
         </div>
     </div>
 
